fixed center-alignment of plan

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,9 @@ main {
 
 #studienplan {
     width: fit-content;
-    margin: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
 }
 
 .semester {
